footer alignment bugs

--- a/src/styles/FullWidthImage.scss
+++ b/src/styles/FullWidthImage.scss
@@ -1,14 +1,15 @@
 .full-width-image {
     display: flex;
     position: relative;
-    padding:0.5em;
     z-index: 1;
+    padding-bottom: 1em;
     background-color: $white;
 
     &_img {
         object-fit: cover;
         width: 100%;
         height: 100%;
+        padding: 0px;
     }
 }
 
